fix: spacing arounhd tags/prj/ctx

--- a/src/styles.css
+++ b/src/styles.css
@@ -163,14 +163,14 @@
   .todo-tag {
     font-size: 0.75rem;
     line-height: 1rem;
-    margin-left: 0.5rem;
+    margin-right: 0.5rem;
     color: var(--text-muted);
     display: inline-block;
   }
   .todo-project {
     font-size: 0.75rem;
     line-height: 1rem;
-    margin-left: 0.5rem;
+    margin-right: 0.5rem;
     padding: 0.125rem 0.25rem;
     border-radius: 9999px;
     color: var(--todotxt-color-gray-700);
@@ -181,7 +181,7 @@
   .todo-ctx {
     font-size: 0.75rem;
     line-height: 1rem;
-    margin-left: 0.5rem;
+    margin-right: 0.5rem;
     padding: 0.125rem 0.25rem;
     border-radius: 9999px;
     color: var(--todotxt-color-gray-700);
